--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
 
     <properties>
         <jdk.version>1.8</jdk.version>
-        <springframework.version>3.1.1.RELEASE</springframework.version>
-        <spring-data.version>1.1.0.RELEASE</spring-data.version>
+        <!--<springframework.version>3.1.1.RELEASE</springframework.version>-->
+        <springframework.version>3.2.10.RELEASE</springframework.version>
+        <spring-data.version>1.10.0.RELEASE</spring-data.version>
         <jpa.version>1.0</jpa.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
         <hibernate-validator.version>4.1.0.Final</hibernate-validator.version>
@@ -38,7 +39,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <!--<failOnMissingWebXml>false</failOnMissingWebXml>-->
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
         </plugins>
@@ -56,6 +57,12 @@
             <artifactId>spring-orm</artifactId>
             <version>${springframework.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
