--- a/pom.xml
+++ b/pom.xml
@@ -10,34 +10,67 @@
     <packaging>war</packaging>
 
     <properties>
-        <jdk.version>1.8</jdk.version>
-        <!--<springframework.version>3.1.1.RELEASE</springframework.version>-->
-        <springframework.version>3.2.10.RELEASE</springframework.version>
-        <spring-data.version>1.10.0.RELEASE</spring-data.version>
-        <jpa.version>1.0</jpa.version>
+        <!-- Spring -->
+        <spring-framework.version>4.3.6.RELEASE</spring-framework.version>
+        <spring-data-jpa.version>1.11.0.RELEASE</spring-data-jpa.version>
+
+        <!-- Web -->
+        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+
+        <!-- DBCP -->
+        <commons-dbcp.version>1.4</commons-dbcp.version>
+
+        <!-- JDBC Driver -->
+        <mysql-connector-java.version>5.1.38</mysql-connector-java.version>
+
+        <!-- Hibernate -->
+        <hibernate-core.version>4.1.0.Final</hibernate-core.version>
+
+        <!--Bean Validation API-->
         <validation-api.version>1.1.0.Final</validation-api.version>
-        <hibernate-validator.version>4.1.0.Final</hibernate-validator.version>
-        <mysql-connector.version>5.1.38</mysql-connector.version>
-        <hibernate.version>3.5.6-Final</hibernate.version>
-        <servlet-api.version>3.1.0</servlet-api.version>
-        <jackson.version>1.9.10</jackson.version>
+        <hibernate-validator.version>5.4.0.Final</hibernate-validator.version>
+
+        <!--Jackson JSON-->
+        <jackson.version>2.8.7</jackson.version>
+
+        <log4j.version>1.7.21</log4j.version>
+
+        <!-- Plugins -->
+        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
+        <maven-war-plugin.version>3.0.0</maven-war-plugin.version>
     </properties>
+
+    <dependencyManagement>
+        <!-- all Spring Framework dependencies -->
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-framework-bom</artifactId>
+                <version>${spring-framework.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>${maven-compiler-plugin.version}</version>
+
                 <configuration>
-                    <source>${jdk.version}</source>
-                    <target>${jdk.version}</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>${maven-war-plugin.version}</version>
+
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
@@ -46,46 +79,30 @@
     </build>
 
     <dependencies>
-        <!--Spring Framework-->
+        <!-- Spring MVC -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${springframework.version}</version>
         </dependency>
+
+        <!-- Spring ORM -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>${springframework.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aop</artifactId>
-            <version>${springframework.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-web</artifactId>
-            <version>${springframework.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
-            <version>${springframework.version}</version>
-        </dependency>
-
-        <!--Spring Data JPA-->
+        <!-- Spring Data -->
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>${spring-data.version}</version>
+            <version>${spring-data-jpa.version}</version>
         </dependency>
 
-        <!--JPA-->
+        <!-- Web -->
         <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>persistence-api</artifactId>
-            <version>${jpa.version}</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javax.servlet-api.version}</version>
         </dependency>
 
         <!--Bean Validation API-->
@@ -100,50 +117,43 @@
             <version>${hibernate-validator.version}</version>
         </dependency>
 
-        <!--MySQL Connector/J-->
+        <!-- MySQL Connector Java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-connector.version}</version>
+            <version>${mysql-connector-java.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>${commons-dbcp.version}</version>
         </dependency>
 
         <!-- Hibernate -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>${hibernate.version}</version>
+            <version>${hibernate-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>${hibernate.version}</version>
-        </dependency>
-
-        <!--Java Servlet API-->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${servlet-api.version}</version>
-        </dependency>
-
-        <!--Commons DBCP-->
-        <dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
+            <version>${hibernate-core.version}</version>
         </dependency>
 
         <!--Logging-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.21</version>
+            <version>${log4j.version}</version>
         </dependency>
 
         <!--JSON-->
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
     </dependencies>
