--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,13 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>server</artifactId>
+    <artifactId>api</artifactId>
     <packaging>war</packaging>
 
     <parent>
-        <artifactId>springrestapp</artifactId>
-        <groupId>ru.eninja.springrestapp</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>backend-server</artifactId>
+        <groupId>ru.eninja.spring</groupId>
+        <version>0.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>ru.eninja.spring</groupId>
+            <artifactId>core</artifactId>
+            <version>0.1</version>
+        </dependency>
+    </dependencies>
+
 </project>
