--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.eninja.springrestapp</groupId>
-    <artifactId>springrestapp</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>ru.eninja.spring</groupId>
+    <artifactId>backend-server</artifactId>
+    <version>0.1</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>server</module>
-        <module>client</module>
+        <module>core</module>
+        <module>api</module>
     </modules>
 
     <properties>
@@ -79,6 +79,12 @@
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
             </plugin>
         </plugins>
     </build>
