Reorganized: module 'api' named 'rest', web config moved to'rest'. Now you can deploy project by executing goal 'mvn tomcat7:run'

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,4 +13,73 @@
         <version>0.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+
+    <properties>
+        <!--Spring Data JPA-->
+        <spring-data-jpa.version>1.11.0.RELEASE</spring-data-jpa.version>
+
+        <!-- DBCP -->
+        <commons-dbcp.version>1.4</commons-dbcp.version>
+
+        <!-- JDBC Driver -->
+        <mysql-connector-java.version>5.1.38</mysql-connector-java.version>
+
+        <!-- Hibernate -->
+        <hibernate-core.version>4.1.0.Final</hibernate-core.version>
+
+        <!--Plugins-->
+        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>${maven-jar-plugin.version}</version>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <!-- Spring ORM -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring-framework.version}</version>
+        </dependency>
+
+        <!-- Spring Data -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring-data-jpa.version}</version>
+        </dependency>
+
+        <!-- MySQL Connector Java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector-java.version}</version>
+        </dependency>
+
+        <!-- Commons DBCP -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>${commons-dbcp.version}</version>
+        </dependency>
+
+        <!-- Hibernate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate-core.version}</version>
+        </dependency>
+    </dependencies>
 </project>
