--- a/core/src/main/resources/persistence.properties
+++ b/core/src/main/resources/persistence.properties
@@ -5,13 +5,10 @@ database.username=root
 database.password=root
 
 # Hibernate configs
-hibernate.show_sql=true
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=update
+hibernate.show_sql=true
+hibernate.format_sql=false
 
 # Packages to scan
 packages_to_scan.entities=ru.eninja.domain
-
-# View resolver
-#view_resolver.prefix=/WEB-INF/view/
-#view_resolver.suffix=.jsp
