add: maven tomcat7 plugin to execute whole application

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,38 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>frontend</module>
         <module>backend</module>
+        <module>frontend</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <path>/</path>
+                    <webapps>
+                        <webapp>
+                            <contextPath>/api</contextPath>
+                            <groupId>ru.eninja.springrestapp</groupId>
+                            <artifactId>rest</artifactId>
+                            <version>${project.version}</version>
+                            <type>war</type>
+                            <asWebapp>true</asWebapp>
+                        </webapp>
+                        <webapp>
+                            <contextPath>/</contextPath>
+                            <groupId>ru.eninja.springrestapp</groupId>
+                            <artifactId>frontend</artifactId>
+                            <version>${project.version}</version>
+                            <type>war</type>
+                            <asWebapp>true</asWebapp>
+                        </webapp>
+                    </webapps>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
