--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,16 @@
         <module>frontend</module>
     </modules>
 
+    <properties>
+        <tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
+                <version>${tomcat7-maven-plugin.version}</version>
                 <configuration>
                     <path>/</path>
                     <webapps>
